[tool.poetry]
name = "specialk"
version = "0.1.0"
description = "text based style transfer"
authors = ["thien <thien@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore=["F722"]

[tool.pytest.ini_options]
testpaths = ["./tests"]
filterwarnings = ["ignore:.*U.*mode is deprecated:DeprecationWarning", "ignore::DeprecationWarning"]
